--- a/inventory_APP_2023_00000057.yml
+++ b/inventory_APP_2023_00000057.yml
@@ -1,10 +1,10 @@
 ungrouped:
   hosts:
-    app_0001:
-      ansible_host: 52.34.41.222
+    APP_2023_00000057:
+      ansible_host: 34.220.226.101
       ansible_user: "ubuntu"
       ansible_port: 22
-      ansible_ssh_private_key_file: ssh_key_app_0001.pem
+      ansible_ssh_private_key_file: ssh_key_APP_2023_00000057.pem
   vars:
     nginx_http_port: 80
     nginx_https_port: 443
