--- a/roles/prestashop/tasks/main.yml
+++ b/roles/prestashop/tasks/main.yml
@@ -1,102 +1,14 @@
 ---
-- name: Remove file (delete file)
-  ansible.builtin.file:
-    path: '{{ item }}'
-    state: absent
-  with_items: 
-    - /etc/apt/keyrings/docker.gpg
-    - /etc/apt/sources.list.d/docker.list
-- name: Update APT Package Manager
-  apt:
-    update_cache: yes
-- name: Install aptitude
-  apt:
-    name: aptitude
-    state: latest
-    update_cache: true
-- name: Install docker packages
-  remote_user: ubuntu
-  apt:
-    name: '{{ item }}'
-    state: latest
-    update_cache: yes
-  with_items:
-    - apt-transport-https
-    - ca-certificates
-    - curl
-    - software-properties-common
-    - python3-pip
-    - python3-setuptools
-  tags:
-    - docker
-- name: Add Docker s official GPG key
-  remote_user: ubuntu
-  apt_key:
-    url: https://download.docker.com/linux/ubuntu/gpg
-    state: present
-  tags:
-    - docker
-- name: Verify that we have the key with the fingerprint
-  remote_user: ubuntu
-  apt_key:
-    id: 0EBFCD88
-    state: present
-  tags:
-    - docker
-- name: Set up the stable repository
-  remote_user: ubuntu
-  apt_repository:
-    repo: deb [arch=amd64] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable
-    state: present
-    update_cache: yes
-  tags:
-    - docker
-- name: Update apt packages
-  remote_user: ubuntu
-  apt:
-    update_cache: yes
-  tags:
-    - docker
-- name: Install docker
-  remote_user: ubuntu
-  apt:
-    name: docker-ce
-    state: present
-    update_cache: yes
-  #notify: Start docker on boot
-  tags:
-    - docker
-- name: Add remote "ubuntu" user to "docker" group
-  remote_user: ubuntu
-  user:
-    name: "ubuntu"
-    group: "docker"
-    append: yes
-  tags:
-    - docker
-- name: Install docker-compose version {{ docker_compose_version }}
-  remote_user: ubuntu
-  get_url: 
-    url : https://github.com/docker/compose/releases/download/{{ docker_compose_version }}/docker-compose-Linux-x86_64
-    dest: ~/docker-compose
-    mode: 'u+x,g+x'
-- name: Check docker-compose exists
-  stat: path=~/docker-compose
-  register: docker_compose
-- name: Move docker-compose to /usr/local/bin/docker-compose
-  command: mv ~/docker-compose /usr/local/bin/docker-compose
-  when: docker_compose.stat.exists
-
 - name: Create workdir
   ansible.builtin.file:
-    path: ~/orangehrm
+    path: '/home/ubuntu/prestashop'
     state: directory
     mode: '0755'
 
 - name: Copy files in workdir
   ansible.builtin.copy:
     src: ../files/
-    dest: ~/prestashop/
+    dest: '/home/ubuntu/prestashop/'
     directory_mode:
     owner: ubuntu
     group: ubuntu
@@ -108,19 +20,19 @@
     state: directory
     mode: '0755'
   with_items:
-  - ~/prestashop/volumes
-  - ~/prestashop/volumes/db/mysql
-  - ~/prestashop/volumes/db/mysql/data
-  - ~/prestashop/volumes/db/mysql/logs
-  - ~/prestashop/volumes/db/mysql/init
-  - ~/prestashop/volumes/web/
-  - ~/prestashop/volumes/web/modules
-  - ~/prestashop/volumes/web/themes
-  - ~/prestashop/volumes/web/override
+  - '/home/ubuntu/prestashop/volumes'
+  - '/home/ubuntu/prestashop/volumes/db/mysql'
+  - '/home/ubuntu/prestashop/volumes/db/mysql/data'
+  - '/home/ubuntu/prestashop/volumes/db/mysql/logs'
+  - '/home/ubuntu/prestashop/volumes/db/mysql/init'
+  - '/home/ubuntu/prestashop/volumes/web'
+  - '/home/ubuntu/prestashop/volumes/web/modules'
+  - '/home/ubuntu/prestashop/volumes/web/themes'
+  - '/home/ubuntu/prestashop/volumes/web/override'
 
 - name: Create and start services
   community.docker.docker_compose:
-    project_src: ~/prestashop
+    project_src: '/home/ubuntu/prestashop'
   register: output
 
 - name: Show results
