--- a/roles/dolibarr/files/docker-compose.yml
+++ b/roles/dolibarr/files/docker-compose.yml
@@ -1,8 +1,8 @@
 # This docker-compose.yml file is used to build and test quickly
 # a specific version of Dolibarr
 #
-# Before build, define the variable DOLI_VERSION as following:
-# $ export DOLI_VERSION=4.0.4
+# Before build, define the variable DOLI_IMAGE_TAG as following:
+# $ export DOLI_IMAGE_TAG=17.0.2-php8.1
 # And then, you can run :
 # $ docker-compose up
 #
@@ -30,7 +30,7 @@ services:
             - mysql-user
             - mysql-password
         volumes:
-            - ./dolibarr/volumes/db/mariadb/:/var/lib/mysql:rw
+            - ./volumes/db/mariadb/:/var/lib/mysql:rw
         environment:
             MYSQL_RANDOM_ROOT_PASSWORD: "1"
             MYSQL_DATABASE: "dolibarr"
@@ -47,12 +47,10 @@ services:
         secrets:
             - mysql-user
             - mysql-password
-        # volumes:
-        #     - ./volumes/dolibarr/documents:/var/www/documents:rw
-        #     - ./volumes/dolibarr/html:/var/www/html:rw
-        #     - ./volumes/dolibarr/scripts:/var/www/scripts:rw
-        #     - /etc/localtime:/etc/localtime:ro
-        #     - /etc/timezone:/etc/timezone:ro
+        volumes:
+            - ./volumes/web/:/var/www:rw
+            # - /etc/localtime:/etc/localtime:ro
+            # - /etc/timezone:/etc/timezone:ro
         environment:
             DOLI_CRON: 1
             DOLI_CRON_KEY: xxxx
@@ -63,7 +61,7 @@ services:
             DOLI_ADMIN_PASSWORD: admin456
             DOLI_DB_HOST: mariadb
             DOLI_DB_NAME: dolibarr
-            DOLI_URL_ROOT: http://localhost
+            DOLI_URL_ROOT: http://${IP_ADDRESS}
             WWW_USER_ID: 1000
             WWW_GROUP_ID: 1000
         networks:
@@ -77,12 +75,10 @@ services:
         secrets:
             - mysql-user
             - mysql-password
-        # volumes:
-        #     - ./volumes/dolibarr/documents:/var/www/documents:rw
-        #     - ./volumes/dolibarr/html:/var/www/html:rw
-        #     - ./volumes/dolibarr/scripts:/var/www/scripts:rw
-        #     - /etc/localtime:/etc/localtime:ro
-        #     - /etc/timezone:/etc/timezone:ro
+        volumes:
+            - ./volumes/web/:/var/www:rw
+            # - /etc/localtime:/etc/localtime:ro
+            # - /etc/timezone:/etc/timezone:ro
         depends_on:
             - mariadb
         environment:
@@ -92,7 +88,7 @@ services:
             DOLI_ADMIN_PASSWORD: "admin456"
             DOLI_DB_HOST: mariadb
             DOLI_DB_NAME: dolibarr
-            DOLI_URL_ROOT: 'http://localhost'
+            DOLI_URL_ROOT: 'http://${IP_ADDRESS}'
             WWW_USER_ID: 1000
             WWW_GROUP_ID: 1000
         ports:
