Change COMPOSE_HTTP_TIMEOUT and DOCKER_CLIENT_TIMEOUT

--- a/playbook.yml
+++ b/playbook.yml
@@ -2,6 +2,14 @@
 - hosts: "{{ code_app }}"
   become: yes
   tasks:
+    - name: Change COMPOSE_HTTP_TIMEOUT and DOCKER_CLIENT_TIMEOUT
+      shell: |
+        set -o pipefail
+        export DOCKER_CLIENT_TIMEOUT=480
+        export COMPOSE_HTTP_TIMEOUT=480
+      args:
+        executable: /bin/bash
+  tasks:
     - name: deploy dolibarr app
       include_role:
         name: dolibarr
