--- a/roles/prestashop/tasks/main.yml
+++ b/roles/prestashop/tasks/main.yml
@@ -37,6 +37,8 @@
   register: output
   environment: 
     IP_ADDRESS: '{{ ip_host }}'
+    DOCKER_CLIENT_TIMEOUT: '480'
+    COMPOSE_HTTP_TIMEOUT: '480'
 
 - name: Show results
   ansible.builtin.debug:
